<resources>

    <string name="action_settings">Settings</string>
    <string name="add_player">Add Player</string>
    <string name="app_name">Risk</string>
    <string name="attack">Attack Country</string>
    <string name="begin_game">Begin Game</string>
    <string name="current_turn">Current Turn: Garret</string>
    <string name="defending_turn">Defending Turn: Will</string>
    <string name="dialog_continue_label">Continue Playing Game</string>
    <string name="dialog_quit_label">Quit</string>
    <string name="dialog_quit_question">Do you really want to quit?</string>
    <string name="hello_world">Hello world!</string>
    <string name="guest">Guest</string>
    <string name="local_tab">Local Game</string>
    <string name="menu_settings">Settings</string>
    <string name="move">Move Troops</string>
    <string name="name_label">Name:</string>
    <string name="place">Place Troops</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>
    <string name="remote_tab">Remote Game</string>
    <string name="remove_player">Remove Player</string>
    <string name="rollA">Roll Attack</string>
    <string name="rollD">Roll Defender</string>
    <string name="save_config">Save As Default Configuration</string>
    <string name="save_config_as_default">Save this Configuration as the Default</string>
    <string name="server_ip_code">Server\'s IP Code:</string>
    <string name="start_the_game">Start Game!</string>
    <string name="surrender">Surrender</string>
    <string name="title_activity_game_main">Shall We Play A Game?</string>
    <string name="deselect">Deselect</string>

</resources>