<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_gui_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper2"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/mapLayout"
        android:layout_width="@dimen/surface_width_height"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/surface_margin_left"
        android:gravity="center_vertical"
        tools:context="com.group3.risk.MainActivity" >

        <TableRow
            android:id="@+id/countriesRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_button"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/russiaButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_button"
                android:background="@drawable/russia" />

            <Button
                android:id="@+id/icelandButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_button"
                android:background="@drawable/iceland" />

            <Button
                android:id="@+id/italyButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_button"
                android:background="@drawable/mexico" />

            <Button
                android:id="@+id/swedenButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/sweden" />
        </TableRow>

        <TableRow
            android:id="@+id/countriesRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_button"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/atlantisButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/atlantis" />

            <Button
                android:id="@+id/hogwartsButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/hogwarts" />

            <Button
                android:id="@+id/narniaButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/narnia" />

            <Button
                android:id="@+id/germanyButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/germany" />
        </TableRow>

        <TableRow
            android:id="@+id/countriesRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_button"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/mordorButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_right"
                android:background="@drawable/mordor1" />

            <Button
                android:id="@+id/gondorButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_right"
                android:background="@drawable/gondor1" />

            <Button
                android:id="@+id/shireButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_right"
                android:background="@drawable/shire1" />

            <Button
                android:id="@+id/rohanButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/rohan" />
        </TableRow>

        <TableRow
            android:id="@+id/countriesRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/bulgariaButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_right"
                android:background="@drawable/bulgaria" />

            <Button
                android:id="@+id/israelButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/israel" />

            <Button
                android:id="@+id/switzerlandButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:layout_marginRight="@dimen/button_margin_right"
                android:background="@drawable/switzerland" />

            <Button
                android:id="@+id/ukraineButton"
                android:layout_width="@dimen/button_width_height"
                android:layout_height="@dimen/button_width_height"
                android:background="@drawable/ukraine" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/surface_margin_left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/playerTurn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/current_turn"
            android:textColor="@color/White"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/playerNotTurn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/playerTurn"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/defending_turn"
            android:textColor="@color/White"
            android:textSize="18dp" />

        <Button
            android:id="@+id/Attack"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_left_right"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_left_right"
            android:layout_marginRight="@dimen/button_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:background="@drawable/custombuttonshapered"
            android:text="@string/attack"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/Move"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_left_right"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_left_right"
            android:layout_marginRight="@dimen/button_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:background="@drawable/custombuttonshapegrey"
            android:text="@string/move"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/Place"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_left_right"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_left_right"
            android:layout_marginRight="@dimen/button_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:background="@drawable/custombuttonshapeblue"
            android:text="@string/place"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/Surrender"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_left_right"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_left_right"
            android:layout_marginRight="@dimen/button_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:background="@drawable/custombuttonshapewhite"
            android:text="@string/surrender"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="@dimen/button_text_size" />

        <LinearLayout
            android:id="@+id/diceLayout1"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/dice1"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:padding="@dimen/button_margin_top_bottom"
                android:src="@drawable/dice1r" />

            <ImageView
                android:id="@+id/dice2"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/button_margin_top_bottom"
                android:src="@drawable/dice2r" />

            <ImageView
                android:id="@+id/dice3"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/button_margin_top_bottom"
                android:src="@drawable/dice3r" />
        </LinearLayout>

        <Button
            android:id="@+id/RollAttack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_left_right"
            android:layout_marginRight="@dimen/button_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:background="@drawable/custombuttonshapered"
            android:text="@string/rollA"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="@dimen/button_text_size" />

        <LinearLayout
            android:id="@+id/diceLayout2"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/dice4"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/button_margin_top_bottom"
                android:src="@drawable/dice4" />

            <ImageView
                android:id="@+id/dice5"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/button_margin_top_bottom"
                android:src="@drawable/dice5" />
        </LinearLayout>

        <Button
            android:id="@+id/RollDefender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_left_right"
            android:layout_marginRight="@dimen/button_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:background="@drawable/custombuttonshapewhite"
            android:text="@string/rollD"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/EndTurn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_left_right"
            android:layout_marginRight="@dimen/button_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:background="@null"
            android:text="End Turn"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="36sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/countryCount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="43dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="1"
        android:textColor="@color/Black"
        android:textSize="75dp" />

    <edu.up.cs301.risk.RiskSurfaceView
        android:id="@+id/countriesMapDraw"
        android:layout_width="@dimen/surface_width_height"
        android:layout_height="@dimen/surface_width_height"
        android:layout_marginLeft="@dimen/surface_margin_left"
        android:layout_marginTop="@dimen/surface_margin_top"
        android:background="@color/CustomTransparent"
        android:gravity="center_vertical" />

</RelativeLayout>